mejoracion layout bienvenida2

--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -21,9 +21,9 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/imageView1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="33dp"
+        android:layout_alignLeft="@+id/imageView1"
+        android:layout_alignTop="@+id/imageView1"
+        android:scaleType="fitStart"
         android:src="@drawable/bienvenue" />
 
 </RelativeLayout>
