--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -18,7 +18,6 @@
         android:contentDescription="TODO"
         android:src="@drawable/logo" />
     
-
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
@@ -27,6 +26,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="33dp"
         android:contentDescription="TODO"
+        android:scaleType="fitStart"
         android:src="@drawable/bienvenue" />
 
 </RelativeLayout>
