--- a/res/layout/activity_list_bluetooth.xml
+++ b/res/layout/activity_list_bluetooth.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="@drawable/bg"
+    >   
     
     <ListView
         android:id="@+id/ListBT"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:visibility="visible" >
-
-    </ListView>
+        android:visibility="visible"
+       
+       >
+</ListView> 
     
 
 </AbsoluteLayout>
